--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,9 @@ code {
 
 /*===== GOOGLE FONTS =====*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600&display=swap'); */
 
 /*===== VARIABLES CSS =====*/
 :root {
