--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
 
 /*===== Icons =====*/
 
-@import 'boxicons/css/boxicons.min.css';
+@import "boxicons/css/boxicons.min.css";
 
 /*===== GOOGLE FONTS =====*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
@@ -168,66 +168,7 @@ body.dark-theme {
   transition: 0.3s;
 }
 
-.nav {
-  height: var(--header-height);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-@media screen and (max-width: 968px) {
-  .nav__menu {
-    position: fixed;
-    bottom: -100%;
-    left: 0;
-    width: 100%;
-    padding: 2rem 1.5rem;
-    background-color: var(--body-color);
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 1rem 1rem 0 0;
-    z-index: var(--z-fixed);
-    transition: 0.3s;
-  }
-}
-
-.nav__logo,
-.nav__toggle {
-  color: var(--title-color);
-  font-weight: var(--font-medium);
-}
-
-.nav__toggle {
-  font-size: 1.2rem;
-  cursor: pointer;
-}
-
-.nav__item {
-  text-align: center;
-}
-
-.nav__list {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
-}
-
-.nav__link {
-  display: flex;
-  flex-direction: column;
-  font-size: var(--smaller-font-size);
-  color: var(--text-color-light);
-  font-weight: var(--font-medium);
-}
-
-.nav__link:hover {
-  color: var(--title-color);
-}
-
-.nav__icon {
-  font-size: 1.2rem;
-  margin-bottom: var(--mb-1);
-  z-index: -1;
-}
+/*  */
 
 .show-menu {
   bottom: var(--header-height);
